--- a/css/styles.css
+++ b/css/styles.css
@@ -120,11 +120,15 @@ header, main, footer {
     display: none; }
     .agencies__img img {
       width: 100%; }
+  .agencies__info--button {
+    border: none;
+    background-color: #fff;
+    color: #000;
+    padding: 5px 20px; }
+    .agencies__info--button:hover {
+      background-color: #768fff; }
 
 .menus {
-  display: -ms-grid;
-  display: grid;
-  padding: 100px 0;
   text-align: center; }
   .menus__part {
     width: 100%; }
@@ -357,7 +361,7 @@ footer {
     -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px; }
-    .menus div {
+    .menus__part div {
       border: 1px solid #bdbdbd; }
     .menus h3 {
       margin: 40px 0 20px 0;
@@ -497,8 +501,6 @@ footer {
     -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px; }
-    .menus div {
-      border: 1px solid #bdbdbd; }
     .menus h3 {
       margin: 40px 0 20px 0;
       color: #424242; }
