--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -170,7 +170,7 @@ header, main, footer {
     padding: 20px;
     div {
       border: 1px solid $light-grey-border;
-      padding: 20px;
+      margin: 0px 10px;
     }
     h3 {
       margin: 20px;
