--- a/css/carousel.css
+++ b/css/carousel.css
@@ -21,10 +21,7 @@
         display: block;
         visibility: visible;
     }
-    .carousel-item {
-        padding: 0px 10px;
-    }
-    
+
 }
 
 @media (min-width: 576px) and (max-width: 768px) {
@@ -117,39 +114,37 @@
         display: block;
         visibility: visible;
     }
-    .carousel-item {
-        padding: 0px 10px;
-    }
+
 }
 
 
 
 @media (min-width: 991px) {
 
-    .carousel-inner .active + .carousel-item + .carousel-item + .carousel-item {
+    .carousel-inner .active + .carousel-item + .carousel-item {
         display: block;
     }
     
-    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item + .carousel-item {
+    .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
         transition: none;
     }
     
-    .carousel-inner .active.col-lg-3.carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    .carousel-inner .active.col-lg-4.carousel-item + .carousel-item + .carousel-item + .carousel-item {
         position: absolute;
         top: 0;
-        right: -25%;  
+        right: -33.3333%;  
         z-index: -1;
         display: block;
         visibility: visible;
     }
     
-    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
         position: relative;
         transform: translate3d(-100%, 0, 0);
         visibility: visible;
     }
     
-    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
         position: relative;
         transform: translate3d(100%, 0, 0);
         visibility: visible;
