--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ footer {
   padding: 0px 10px;
   min-height: 300px;
   background-color: #000;
-  color: #616161;
+  color: #bbbbbb;
   text-align: center; }
 
 .footer__agencies {
@@ -221,7 +221,7 @@ footer {
       color: #424242; }
     .page-menu__div p {
       margin: 0 20px 20px 20px;
-      color: #616161;
+      color: #313131;
       font-weight: 600; }
     .page-menu__div img {
       width: 100%; }
@@ -392,7 +392,7 @@ footer {
     color: #424242; }
   .menus p {
     margin: 0 20px 40px 20px;
-    color: #616161;
+    color: #313131;
     font-weight: 600; }
   .menus img {
     width: 100%; }
@@ -418,10 +418,10 @@ footer {
   .footer__agencies {
     border: 1px solid #424242;
     padding: 20px;
-    margin-top: 20px;
+    margin-top: 40px;
     border-radius: 15px;
-    -webkit-box-shadow: 1px 1px 15px #616161;
-    box-shadow: 1px 1px 15px #616161; }
+    -webkit-box-shadow: 1px 1px 15px #313131;
+    box-shadow: 1px 1px 15px #313131; }
   .footer__link a {
     font-size: 18px; }
   .page-menu {
@@ -448,7 +448,7 @@ footer {
         color: #424242; }
       .page-menu__div p {
         margin: 0 20px 20px 20px;
-        color: #616161;
+        color: #313131;
         font-weight: 600; }
       .page-menu__div .red {
         color: #d32f2f; }
@@ -473,7 +473,7 @@ footer {
     .page-lucarno__div p {
       font-size: 14px;
       margin: 0 0 3px 0;
-      color: #616161; }
+      color: #313131; }
     .page-lucarno__div img {
       width: 100%; }
     .page-lucarno__div .red {
@@ -540,7 +540,7 @@ footer {
       color: #424242; }
     .menus p {
       margin: 0 20px 40px 20px;
-      color: #616161;
+      color: #313131;
       font-weight: 600; }
     .menus img {
       width: 100%; }
@@ -603,7 +603,7 @@ footer {
     .singel-page__div p {
       font-size: 14px;
       margin: 0 0 3px 0;
-      color: #616161; }
+      color: #313131; }
     .singel-page__div img {
       width: 100%; }
     .singel-page__div .red {
@@ -691,7 +691,7 @@ footer {
     .singel-page__div p {
       font-size: 14px;
       margin: 0 0 3px 0;
-      color: #616161; }
+      color: #313131; }
     .singel-page__div img {
       width: 100%; }
     .singel-page__div .red {
