--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,7 +7,8 @@ $blue: #2962ff;
 $dark-blue: #0039cb;
 $light-blue: #768fff;
 $grey: #424242;
-$light-grey: #616161;
+$light-grey: #313131;
+$light-grey-text: #bbbbbb;
 $light-grey-border: #bdbdbd;
 $white: #fff;
 $black: #000;
@@ -219,7 +220,7 @@ footer {
   padding: 0px 10px;
   min-height: 300px;
   background-color: $black;
-  color: $light-grey;
+  color: $light-grey-text;
   text-align: center;
 }
 .footer {
@@ -553,7 +554,7 @@ footer {
       &__agencies {
         border: 1px solid $grey;
         padding: 20px;
-        margin-top: 20px;
+        margin-top: 40px;
         border-radius: 15px;
         box-shadow: 1px 1px 15px $light-grey;
       }
