--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,7 +33,7 @@ header, main, footer {
   display: none ;
 }
 .hover {
-  border-bottom: 2px solid $blue;
+  /* border-bottom: 2px solid $blue; */
   color: $blue !important;
 }
 
