--- a/css/styles.css
+++ b/css/styles.css
@@ -18,13 +18,47 @@ header, main, footer {
   /* border-bottom: 2px solid $blue; */
   color: #2962ff !important; }
 
+:root {
+  --screen-width:     320px;
+  --screen-height:    560px;
+  --header-bg-color:  #673AB7;
+  --splash-bg-color:  #2962ff; }
+
 /*------------------HOME PAGE---------------HEADER----------------------------*/
 .header {
   background-image: url("../img/background_img_1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 390px;
-  background-position: center; }
+  background-position: center;
+  /*  &__menu {
+    grid-column: 1/13;
+    grid-row: 2/3;
+    position: absolute;
+    width: 90%;
+    top: 75px;
+
+    ul {
+      list-style:none;
+      padding: 0px;
+    }
+    li {
+      padding: 5px;
+    }
+    a {
+      display: block;
+      color: $white;
+      font-size: 22px;
+    }
+    li a:hover {
+      color: #fff;
+      text-decoration: none;
+    }
+    i {
+      padding-right: 10%;
+    }
+  }
+  */ }
   .header__wrapper {
     display: -ms-grid;
     display: grid;
@@ -40,30 +74,180 @@ header, main, footer {
     text-align: center; }
     .header__logo img {
       width: 180px; }
-  .header__menu {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 12;
-    grid-column: 1/13;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
+  .header .nav {
     position: absolute;
-    width: 90%;
-    top: 75px; }
-    .header__menu ul {
+    width: 96%;
+    top: 0px; }
+    .header .nav__toggle {
+      display: inline-block;
+      position: absolute;
+      z-index: 10;
+      padding: 0;
+      border: 0;
+      background: transparent;
+      outline: 0;
+      right: 15px;
+      top: 15px;
+      cursor: pointer;
+      border-radius: 50%;
+      -webkit-transition: background-color .15s linear;
+      -o-transition: background-color .15s linear;
+      transition: background-color .15s linear; }
+      .header .nav__toggle:hover, .header .nav__toggle:focus {
+        background-color: rgba(0, 0, 0, 0.5); }
+    .header .nav__menu {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      height: var(--screen-height);
+      position: relative;
+      z-index: 5;
+      visibility: hidden;
+      width: 100%;
       list-style: none;
       padding: 0px; }
-    .header__menu li {
-      padding: 5px; }
-    .header__menu a {
+    .header .nav__item {
+      opacity: 0;
+      -webkit-transition: all 0.3s cubic-bezier(0, 0.995, 0.99, 1) 0.3s;
+      -o-transition: all 0.3s cubic-bezier(0, 0.995, 0.99, 1) 0.3s;
+      transition: all 0.3s cubic-bezier(0, 0.995, 0.99, 1) 0.3s; }
+    .header .nav__item:nth-child(1) {
+      -webkit-transform: translateY(-40px);
+      -ms-transform: translateY(-40px);
+      transform: translateY(-40px); }
+    .header .nav__item:nth-child(2) {
+      -webkit-transform: translateY(-80px);
+      -ms-transform: translateY(-80px);
+      transform: translateY(-80px); }
+    .header .nav__item:nth-child(3) {
+      -webkit-transform: translateY(-120px);
+      -ms-transform: translateY(-120px);
+      transform: translateY(-120px); }
+    .header .nav__item:nth-child(4) {
+      -webkit-transform: translateY(-160px);
+      -ms-transform: translateY(-160px);
+      transform: translateY(-160px); }
+    .header .nav__item:nth-child(5) {
+      -webkit-transform: translateY(-200px);
+      -ms-transform: translateY(-200px);
+      transform: translateY(-200px); }
+    .header .nav__link {
+      color: white;
       display: block;
-      color: #fff;
-      font-size: 22px; }
-    .header__menu li a:hover {
-      color: #fff;
-      text-decoration: none; }
-    .header__menu i {
-      padding-right: 10%; }
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 5px;
+      font-size: 1.25rem;
+      text-decoration: none;
+      padding: 1rem; }
+      .header .nav__link:hover, .header .nav__link:focus {
+        outline: 0;
+        background-color: rgba(0, 0, 0, 0.2); }
+  .header .menuicon {
+    display: block;
+    cursor: pointer;
+    color: white;
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+    -o-transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+    transition: 0.3s cubic-bezier(0.165, 0.84, 0.44, 1); }
+    .header .menuicon__bar, .header .menuicon__circle {
+      fill: none;
+      stroke: currentColor;
+      stroke-width: 3;
+      stroke-linecap: round; }
+    .header .menuicon__bar {
+      -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
+      -webkit-transform-origin: 50% 50%;
+      -ms-transform-origin: 50% 50%;
+      transform-origin: 50% 50%;
+      -webkit-transition: -webkit-transform .25s ease-in-out;
+      transition: -webkit-transform .25s ease-in-out;
+      -o-transition: transform .25s ease-in-out;
+      transition: transform .25s ease-in-out;
+      transition: transform .25s ease-in-out, -webkit-transform .25s ease-in-out; }
+    .header .menuicon__circle {
+      -webkit-transition: stroke-dashoffset .3s linear .1s;
+      -o-transition: stroke-dashoffset .3s linear .1s;
+      transition: stroke-dashoffset .3s linear .1s;
+      stroke-dashoffset: 144.51326;
+      stroke-dasharray: 144.51326; }
+  .header .splash {
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    width: 1px;
+    height: 1px; }
+    .header .splash::after {
+      content: "";
+      display: block;
+      position: absolute;
+      border-radius: 50%;
+      background-color: var(--splash-bg-color);
+      width: 284vmax;
+      height: 284vmax;
+      top: -142vmax;
+      left: -142vmax;
+      -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+      transform: scale(0);
+      -webkit-transform-origin: 50% 50%;
+      -ms-transform-origin: 50% 50%;
+      transform-origin: 50% 50%;
+      -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+      transition: -webkit-transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+      -o-transition: transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+      transition: transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+      transition: transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06), -webkit-transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+      will-change: transform; }
+  .header .nav:target > .splash::after,
+  .header .nav--open > .splash::after {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1); }
+  .header .nav:target .menuicon,
+  .header .nav--open .menuicon {
+    color: white;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg); }
+    .header .nav:target .menuicon__circle,
+    .header .nav--open .menuicon__circle {
+      stroke-dashoffset: 0; }
+    .header .nav:target .menuicon__bar:nth-child(1), .header .nav:target .menuicon__bar:nth-child(4),
+    .header .nav--open .menuicon__bar:nth-child(1),
+    .header .nav--open .menuicon__bar:nth-child(4) {
+      opacity: 0; }
+    .header .nav:target .menuicon__bar:nth-child(2),
+    .header .nav--open .menuicon__bar:nth-child(2) {
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg); }
+    .header .nav:target .menuicon__bar:nth-child(3),
+    .header .nav--open .menuicon__bar:nth-child(3) {
+      -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      transform: rotate(-45deg); }
+  .header .nav:target .nav__menu,
+  .header .nav--open .nav__menu {
+    visibility: visible; }
+  .header .nav:target .nav__item,
+  .header .nav--open .nav__item {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0); }
   .header__icon {
     position: absolute;
     right: 0px;
@@ -139,7 +323,7 @@ header, main, footer {
     padding: 20px; }
     .menus__part div {
       border: 1px solid #bdbdbd;
-      margin: 0px 10px; }
+      margin: 0px 0px; }
     .menus__part h3 {
       margin: 20px; }
     .menus__part p {
@@ -294,7 +478,40 @@ footer {
     top: 21px; }
   .header {
     min-height: 940px;
-    background-position: center; }
+    background-position: center;
+    /*
+    &__menu {
+      grid-column: 3/11;
+      grid-row: auto;
+      top: 20px;
+      position:fixed;
+      width:100%;
+      ul {
+        padding: 0px;
+        margin:0px;
+        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+        background-color: rgba(0, 0, 0, 0.5);
+        text-align: center;
+      }
+      li{
+        display: inline-block;
+        padding: 5px 10px;
+      }
+      a {
+        color: $white;
+        margin: 5px 5px;
+        text-decoration: none;
+        font-size: 20px
+      }
+      a:hover {
+        color: $blue;
+        border-bottom: 2px solid $blue;
+      }
+      i {
+        display: none;
+      }
+    } */ }
     .header__wrapper {
       display: -ms-grid;
       display: grid;
@@ -313,34 +530,6 @@ footer {
       text-align: center; }
       .header__logo img {
         width: 230px; }
-    .header__menu {
-      -ms-grid-column: 3;
-      -ms-grid-column-span: 8;
-      grid-column: 3/11;
-      grid-row: auto;
-      top: 20px;
-      position: fixed;
-      width: 100%; }
-      .header__menu ul {
-        padding: 0px;
-        margin: 0px;
-        border-top: 1px solid #fff;
-        border-bottom: 1px solid #fff;
-        background-color: rgba(0, 0, 0, 0.5);
-        text-align: center; }
-      .header__menu li {
-        display: inline-block;
-        padding: 5px 10px; }
-      .header__menu a {
-        color: #fff;
-        margin: 5px 5px;
-        text-decoration: none;
-        font-size: 20px; }
-      .header__menu a:hover {
-        color: #2962ff;
-        border-bottom: 2px solid #2962ff; }
-      .header__menu i {
-        display: none; }
     .header__title {
       -ms-grid-column: 4;
       -ms-grid-column-span: 6;
@@ -386,7 +575,8 @@ footer {
       display: block; }
   .menus__part div {
     border: 1px solid #bdbdbd;
-    padding: 0px; }
+    padding: 0px;
+    margin: 0px 10px; }
   .menus h3 {
     margin: 40px 0 20px 0;
     color: #424242; }
