--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -36,6 +36,22 @@ header, main, footer {
   /* border-bottom: 2px solid $blue; */
   color: $blue !important;
 }
+// ---------------------------
+// Vars & Helper Functions
+// ---------------------------
+
+:root {
+  --screen-width:     320px;
+  --screen-height:    560px;
+  --header-bg-color:  #673AB7;
+  --splash-bg-color:  #2962ff;
+}
+
+// calculate a circle's circumference based on radius
+@function circumference($r){
+  $pi: 3.141592653;
+  @return 2*$pi*$r;
+}
 
 
 /*------------------HOME PAGE---------------HEADER----------------------------*/
@@ -59,7 +75,179 @@ header, main, footer {
       width:180px;
     }
   }
-  &__menu {
+  // ---------------------------
+  // Main Navigation Menu
+  // ---------------------------
+  .nav {
+    position: absolute;
+    width: 96%;
+    top: 0px;
+    // Toggle Button
+    &__toggle {
+      display:inline-block;
+      position:absolute;
+      z-index:10;
+      padding:0;
+      border:0;
+      background:transparent;
+      outline:0;
+      right:15px;
+      top:15px;
+      cursor:pointer;
+      border-radius:50%;
+      transition:background-color .15s linear;
+      
+      &:hover,
+      &:focus {
+        background-color:rgba(0,0,0,.5);
+      }
+    }
+    
+    &__menu {
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      height:var(--screen-height);
+      position:relative;
+      z-index:5;
+      visibility:hidden;
+      width:100%;
+      list-style: none;
+      padding:0px;
+    }
+    
+    &__item {
+      opacity:0;
+      transition: all .3s cubic-bezier(0.000, 0.995, 0.990, 1.000) .3s;
+    }
+    @for $i from 1 through 5 {
+      &__item:nth-child(#{$i}){
+        transform:translateY(-40px * $i);
+      }
+    }
+    
+    &__link {
+      color:white;
+      display:block;
+      text-align:center;
+      text-transform:uppercase;
+      letter-spacing:5px;
+      font-size:1.25rem;
+      text-decoration:none;
+      padding:1rem;
+      
+      &:hover,
+      &:focus {
+        outline:0;
+        background-color:rgba(0,0,0,0.2);
+      }
+    }
+  }
+  // ---------------------------
+  // SVG Menu Icon
+  // ---------------------------
+  .menuicon {
+    display:block;
+    cursor:pointer;
+    color: white;
+    
+    transform:rotate(0deg);
+    transition: .3s cubic-bezier(0.165, 0.840, 0.440, 1.000); 
+    
+    &__bar,
+    &__circle {
+      fill:none;
+      stroke: currentColor;
+      stroke-width:3;
+      stroke-linecap:round;
+    }
+    &__bar {
+      transform: rotate(0deg);
+      transform-origin:50% 50%;
+      transition: transform .25s ease-in-out;
+    }
+    &__circle {
+      transition: stroke-dashoffset .3s linear .1s;
+      stroke-dashoffset:circumference(23); // 23 is the <circle>'s radius
+      stroke-dasharray:circumference(23);
+    }
+  }
+  // ---------------------------
+  // Circular Splash Background
+  // ---------------------------  
+  .splash {
+    position:absolute;
+    top:40px;
+    right:40px;
+    width: 1px;
+    height: 1px;
+    
+    &::after {
+      content:"";
+      display:block;
+      position:absolute;
+      border-radius:50%;
+      background-color:var(--splash-bg-color);
+      
+      // screen diameter can be 142vmax at most,
+      // circle needs to be twice that size to cover it
+      width:284vmax;
+      height:284vmax;
+      top:-142vmax;
+      left:-142vmax;
+      
+      transform: scale(0);
+      transform-origin:50% 50%;
+      transition: transform .5s cubic-bezier(0.755, 0.050, 0.855, 0.060);
+      
+      // will-change tells the browser we plan to 
+      // animate this property in the near future
+      will-change:transform;
+    }
+  }
+  // ---------------------------
+  // Active State
+  // ---------------------------
+  .nav:target,
+  .nav--open {
+    //scale the background circle to full size
+    > .splash::after {
+      transform:scale(1);
+    }
+    
+    //animate the menu icon
+    .menuicon {
+      color:white;
+      transform:rotate(180deg);
+      
+      &__circle {
+        stroke-dashoffset:0;
+      }
+      &__bar:nth-child(1),
+      &__bar:nth-child(4) {
+        opacity:0;
+      }
+      &__bar:nth-child(2) {
+        transform: rotate(45deg);
+      }
+      &__bar:nth-child(3) {
+        transform: rotate(-45deg);
+      }
+    }
+    //show the nav items
+    .nav {
+      &__menu {
+        visibility:visible;
+      }
+    
+      &__item {
+        opacity:1;
+        transform:translateY(0);
+      }
+    }
+  }
+
+/*  &__menu {
     grid-column: 1/13;
     grid-row: 2/3;
     position: absolute;
@@ -86,6 +274,7 @@ header, main, footer {
       padding-right: 10%;
     }
   }
+  */
   &__icon {
     position: absolute;
     right:0px;
@@ -176,7 +365,7 @@ header, main, footer {
     padding: 20px;
     div {
       border: 1px solid $light-grey-border;
-      margin: 0px 10px;
+      margin: 0px 0px;
     }
     h3 {
       margin: 20px;
@@ -399,6 +588,7 @@ footer {
         width: 230px;
       }
     }
+    /*
     &__menu {
       grid-column: 3/11;
       grid-row: auto;
@@ -430,7 +620,7 @@ footer {
       i {
         display: none;
       }
-    }
+    } */
     &__social {
       //grid-column: 11/13;
       //padding: 60px 0 0 90px;
@@ -504,6 +694,7 @@ footer {
         div {
           border: 1px solid $light-grey-border;
           padding: 0px;
+          margin: 0px 10px;
         }
       }
       h3 {
