--- a/css/styles.css
+++ b/css/styles.css
@@ -530,6 +530,78 @@ footer {
       text-align: center; }
       .header__logo img {
         width: 230px; }
+    .header .nav {
+      -ms-grid-column: 3;
+      -ms-grid-column-span: 8;
+      grid-column: 3/11;
+      grid-row: auto;
+      top: 20px;
+      position: fixed;
+      width: 100%; }
+      .header .nav__menu {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        padding: 0px;
+        margin: 15px 0 0 0;
+        height: 5%;
+        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+        background-color: rgba(0, 0, 0, 0.5);
+        text-align: center; }
+        .header .nav__menu li {
+          display: inline-block; }
+        .header .nav__menu a {
+          color: #fff;
+          margin: 5px 5px;
+          text-decoration: none;
+          font-size: 20px; }
+        .header .nav__menu a:hover {
+          color: #2962ff;
+          border-bottom: 2px solid #2962ff; }
+      .header .nav__link {
+        color: white;
+        display: block;
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: 0px;
+        font-size: 1.25rem;
+        text-decoration: none;
+        padding: 5px 10px; }
+        .header .nav__link:hover, .header .nav__link:focus {
+          outline: 0;
+          background-color: rgba(0, 0, 0, 0.2); }
+    .header .menuicon {
+      display: none; }
+    .header .splash {
+      position: absolute;
+      top: 40px;
+      right: 40px;
+      width: 1px;
+      height: 1px; }
+      .header .splash::after {
+        content: "";
+        display: block;
+        position: absolute;
+        border-radius: 50%;
+        background: none;
+        width: 284vmax;
+        height: 284vmax;
+        top: -142vmax;
+        left: -142vmax;
+        -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+        transform: scale(0);
+        -webkit-transform-origin: 50% 50%;
+        -ms-transform-origin: 50% 50%;
+        transform-origin: 50% 50%;
+        -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        transition: -webkit-transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        -o-transition: transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        transition: transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        transition: transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06), -webkit-transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        will-change: transform; }
     .header__title {
       -ms-grid-column: 4;
       -ms-grid-column-span: 6;
