--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -588,6 +588,85 @@ footer {
         width: 230px;
       }
     }
+    .nav {
+      grid-column: 3/11;
+      grid-row: auto;
+      top: 20px;
+      position:fixed;
+      width:100%;
+      &__menu {
+        flex-direction: row;
+        padding: 0px;
+        margin:15px 0 0 0;
+        height: 5%;
+        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+        background-color: rgba(0, 0, 0, 0.5);
+        text-align: center;       
+          li{
+            display: inline-block;
+          }
+          a {
+            color: $white;
+            margin: 5px 5px;
+            text-decoration: none;
+            font-size: 20px
+          }
+          a:hover {
+            color: $blue;
+            border-bottom: 2px solid $blue;
+          }
+      }
+      &__link {
+        color:white;
+        display:block;
+        text-align:center;
+        text-transform:uppercase;
+        letter-spacing:0px;
+        font-size:1.25rem;
+        text-decoration:none;
+        padding:5px 10px;
+        
+        &:hover,
+        &:focus {
+          outline:0;
+          background-color:rgba(0,0,0,0.2);
+        }
+      }
+    }
+    .menuicon {
+      display: none;
+    }
+    .splash {
+      position:absolute;
+      top:40px;
+      right:40px;
+      width: 1px;
+      height: 1px;
+      
+      &::after {
+        content:"";
+        display:block;
+        position:absolute;
+        border-radius:50%;
+        background: none;
+        
+        // screen diameter can be 142vmax at most,
+        // circle needs to be twice that size to cover it
+        width:284vmax;
+        height:284vmax;
+        top:-142vmax;
+        left:-142vmax;
+        
+        transform: scale(0);
+        transform-origin:50% 50%;
+        transition: transform .5s cubic-bezier(0.755, 0.050, 0.855, 0.060);
+        
+        // will-change tells the browser we plan to 
+        // animate this property in the near future
+        will-change:transform;
+      }
+    }
     /*
     &__menu {
       grid-column: 3/11;
